# DancePartner

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
example_data/: osti_ecoli_short.txt  pubmed_ecoli_short.txt  scopus_ecoli_short.txt
example_data/papers/: output_summary.txt
example_data/papers/pubmed_abstracts/: 28734827.txt
example_data/papers/pubmed_clean/: 30788345.txt  30796049.txt  35228596.txt  (+1 more)
omes/: LipidMaps_Relationships.txt  UP000001570_proteome.txt  UP000001940_proteome.txt  parse_lipid_relationships.py  parse_lipidome.py  parse_metabolome.py  stop_words_english.txt
src/DancePartner/: __init__.py  bert_functions.py  construct_network.py  create_synonym_table.py  deduplicate_papers.py  extract_terms.py  find_terms_in_papers.py  pull_ome.py  pull_osti.py  pull_papers.py  pull_pubmed.py  pull_relationships.py  pull_scopus.py
tests/: test_pull_ome.py  test_pull_papers.py  test_pull_relationships.py  test_run_bert.py
vignettes/: how_to_pull_from_databases.ipynb  how_to_pull_papers.ipynb  how_to_use_DancePartner.ipynb  publication_example.ipynb
vignettes/database_example/: 1423_uniprot.txt  1423_wikipathways.txt
vignettes/full_pipeline_example/: 6239_uniprot.txt  bert_results.txt  sentence_biomolecule_pairs.csv  synonym_table.txt
vignettes/vignette_data/: OSTI_Export.csv  PubMed_Export.csv  Scopus_Export.csv  osti_ecoli_vignette.txt  pubmed_ecoli_vignette.txt  scopus_ecoli_vignette.txt
(+60 files in other folders)
